Clean up container styles
- Rename `content` class to `grid-container`
  - This makes the purpose of the class ultra-clear
  - `grid-container` is a more specific name and is easier to search the
    code-base for than `content`
- Remove two classes used to set Neat's `outer-container` (`content` and
  `section-content`) in favor of one reusable class (`grid-container`)

--- a/app/assets/stylesheets/components/_components.scss
+++ b/app/assets/stylesheets/components/_components.scss
@@ -5,6 +5,7 @@
 @import "button";
 @import "code";
 @import "footer";
+@import "grid-container";
 @import "icon";
 @import "inline-flash";
 @import "logo";
