--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -17,7 +17,7 @@
       .flash{ class: key }
         = value
 
-    %main.content{ role: "main" }
+    %main{ role: "main" }
       = yield
 
     = render "application/footer"
