--- a/app/views/accounts/show.haml
+++ b/app/views/accounts/show.haml
@@ -2,7 +2,7 @@
 
 = render 'settings'
 
-%section.account-section
+%section.account-section.grid-container
   %aside.account-nav
     %h3
       Plans
