--- a/app/assets/stylesheets/components/_components.scss
+++ b/app/assets/stylesheets/components/_components.scss
@@ -5,6 +5,7 @@
 @import "badge";
 @import "button";
 @import "code";
+@import "grid-container";
 @import "icon";
 @import "inline-flash";
 @import "logo";
