--- a/app/views/repos/index.haml
+++ b/app/views/repos/index.haml
@@ -2,12 +2,13 @@
 
 = render 'settings'
 
-- if display_onboarding?
-  = render 'onboarding'
+.grid-container
+  - if display_onboarding?
+    = render 'onboarding'
 
-%section.organization-list{ 'organization-list' => '' }
-= react_component("app.ReposContainer",
-    authenticity_token: form_authenticity_token,
-    has_private_access: current_user.has_access_to_private_repos?,
-    userHasCard: current_user.stripe_customer_id.present?,
-  )
+  %section.organization-list{ 'organization-list' => '' }
+  = react_component("app.ReposContainer",
+      authenticity_token: form_authenticity_token,
+      has_private_access: current_user.has_access_to_private_repos?,
+      userHasCard: current_user.stripe_customer_id.present?,
+    )
